--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "browserify": "^9.0.7",
     "dat-gui": "^0.5.0",
     "del": "^0.1.3",
+    "glsl-noise": "0.0.0",
     "glslify": "^2.0.1",
+    "gsap": "^1.16.1",
     "gulp": "^3.8.11",
     "gulp-compile-handlebars": "^0.4.4",
     "gulp-concat": "^2.5.2",
@@ -42,6 +44,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "browserify": {
-    "transform": ["glslify"]
+    "transform": [
+      "glslify"
+    ]
   }
 }
