--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gulp-connect": "^2.2.0",
     "gulp-continuous-concat": "^0.1.1",
     "gulp-data": "^1.2.0",
+    "gulp-iconfont": "^1.0.0",
+    "gulp-iconfont-css": "0.0.9",
     "gulp-if": "^1.2.5",
     "gulp-insert": "^0.4.0",
     "gulp-less": "^3.0.0",
