--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.1.1",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-streamify": "0.0.5",
     "gulp-typescript": "^2.6.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
