--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "three": "^0.70.0",
     "three-effectcomposer": "0.0.1",
     "tsify": "^0.8.1",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "voronoi-diagram": "^1.0.1"
   },
   "devDependencies": {
     "gulp-debug": "^1.0.1"
