--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-util": "^3.0.1",
     "gulp-watch": "^2.0.0",
     "path": "^0.11.14",
+    "randomcolor": "^0.2.0",
     "run-sequence": "^1.0.2",
     "stats-js": "^1.0.0-alpha1",
     "three": "^0.70.0",
