--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Bedrock is a modern WordPress stack that helps you get started with the best development tools and project structure.",
   "main": "gulpfile.js",
   "dependencies": {
-    "browserify": "^9.0.7",
+    "browserify": "^11.2.0",
     "dat-gui": "^0.5.0",
     "del": "^0.1.3",
     "glsl-noise": "0.0.0",
-    "glslify": "^2.0.1",
+    "glslify": "^2.3.1",
     "gsap": "^1.16.1",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-compile-handlebars": "^0.4.4",
     "gulp-concat": "^2.5.2",
@@ -37,9 +37,10 @@
     "randomcolor": "^0.2.0",
     "run-sequence": "^1.0.2",
     "stats-js": "^1.0.0-alpha1",
-    "three": "^0.70.0",
+    "three": "^0.72.0",
     "three-effectcomposer": "0.0.1",
-    "tsify": "^0.8.1",
+    "three-fly-controls": "^1.1.0",
+    "tsify": "^0.12.2",
     "vinyl-source-stream": "^1.1.0",
     "voronoi-diagram": "^1.0.1",
     "yargs": "^3.8.0"
